examples/readme_validation/syntax_cases/pass/pass_comments_and_blank.dsl
@name: "语法正例-注释空行"

# 注释行

value = 1
if ${value} == 1 do
    [打印], 内容: "ok"
else
    [打印], 内容: "not ok"
end
