examples/readme_validation/syntax_cases/fail/fail_unclosed_quote.dsl
@name: "语法负例-错误条件表达式"
if "abc" == do
    [打印], 内容: "bad condition"
end
